--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
+<!DOCTYPE html><html lang=""><head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="吉赛尔的工具库; Project QT; 薅羊毛">
     <title>吉赛尔的工具库</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-  </body>
-</html>
+  
+
+</body></html>
