--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="吉赛尔的工具库; Project QT; 薅羊毛">
-    <title>吉赛尔的工具库</title>
+    <meta name="description" content="吉赛尔的工具箱; Project QT; 薅羊毛">
+    <title>吉赛尔的工具箱</title>
   </head>
   <body>
     <div id="app"></div>
